update class.newInstance() to class.getConstructor().newInstance()